tests/baselines/reference/parserForInStatement3.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts(1,13): error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts(1,18): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement3.ts (2 errors) ====
    for (var a, b in X) {
                ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
                     ~
!!! error TS2304: Cannot find name 'X'.
    }